<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_prev"
        android:icon="@drawable/ic_chevron_left"
        android:title="@string/previous"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_today"
        android:icon="@drawable/ic_history_today"
        android:title="@string/go_to_current"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_next"
        android:icon="@drawable/ic_chevron_right"
        android:title="@string/next"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_month"
        android:icon="@drawable/ic_shopping_bag_speed"
        android:title="@string/active_total"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_file_export"
        android:title="@string/export"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>